feat(samples/mono): add object width estimate, and osd improved

--- a/samples/cns_launcher/configs/decode_config.json
+++ b/samples/cns_launcher/configs/decode_config.json
@@ -5,6 +5,7 @@
       "reuse_cndec_buf" : "true",
       "output_type" : "mlu",
       "decoder_type" : "mlu",
+      "output_buf_number" : 4,
       "output_buf_number" : 26,
       "apply_stride_align_for_scaler": true,
       "device_id" : 0
