--- a/samples/cns_launcher/configs/decode_config.json
+++ b/samples/cns_launcher/configs/decode_config.json
@@ -5,9 +5,9 @@
       "reuse_cndec_buf" : "true",
       "output_type" : "mlu",
       "decoder_type" : "mlu",
-      "input_buf_number" : 4,
+      "input_buf_number" : 32,
       "output_buf_number" : 32,
-      "apply_stride_align_for_scaler": "true",
+      "apply_stride_align_for_scaler": "false",
       "device_id" : 0
     }
   }
